@@ -338,8 +338,11 @@ public class SendTweet extends Service {
                             .setSmallIcon(R.drawable.ic_stat_icon)
                             .setContentTitle(getResources().getString(R.string.tweet_success))
                             .setOngoing(false)
-                            .setVibrate(new long[] {0, 10})
                             .setTicker(getResources().getString(R.string.tweet_success));
+
+            if (AppSettings.getInstance(this).vibrate) {
+                mBuilder.setVibrate(new long[] {0, 10});
+            }
 
             stopForeground(true);
 
